# graphics-programming-2021

./: CMakeLists.txt  notes.txt
Exam/Parallax_Occlusion_Mapping/: main.cpp  mesh.h  model.h
Exam/Parallax_Occlusion_Mapping/shaders/: interiorMapping.frag  parallax.frag  parallax2.frag  parallax3.frag  parallax4.frag
assignments/rendering pipeline/: CMakeLists.txt  pipeline.md
assignments/rendering pipeline/shaders/: color.frag  distance.frag
assignments/voronoi/: main.cpp
assignments/voronoi/shaders/: distance_color.frag  shader.vert
assignments/weather/: CMakeLists.txt  main.cpp
assignments/weather/shaders/: pointShader.vert  shader.vert
backup/Exam/Parallax_Occlusion_Mapping/: CMakeLists.txt  main.cpp
exercises/exercise_1/exercise_1_3/: main.cpp
exercises/exercise_1/exercise_1_4/: main.cpp
exercises/exercise_1/exercise_1_5/: main.cpp
exercises/exercise_1/exercise_1_6/: main.cpp
exercises/exercise_11_solutions/exercise_11_4_and_11_5_sol/: main.cpp
exercises/exercise_12/exercise_12_1_to_12_3/: main.cpp
exercises/exercise_12/exercise_12_4_to_12_6/: main.cpp
exercises/exercise_12_solutions/exercise_12_4_to_12_6_sol/: main.cpp
exercises/exercise_2/exercise_2_2_to_2_7/: main.cpp
exercises/exercise_3/exercise_3/: main.cpp
exercises/exercise_5/exercise_5_1/: main.cpp
exercises/exercise_5/exercise_5_2/: main.cpp
exercises/exercise_8/exercise_8_1_to_8_6/: main.cpp
exercises/exercise_8_solutions/exercise_8_1_to_8_6_sol/: main.cpp
exercises/exercise_9/exercise_9/: main.cpp
exercises/exercise_9_solutions/exercise_9_sol/: main.cpp
(+3 files in other folders)
